--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       <option value="Study">📚 Study</option>
       <option value="Health">🏃 Health</option>
       <option value="Personal">🏠 Personal</option>
+      <option value="Sleep">😴 Sleep</option>
       <option value="Other">✨ Other</option>
     </select>
     <input type="text" id="customCategory" placeholder="Enter custom category" style="display: none;" />
@@ -82,8 +83,6 @@
   </footer>
 
   <script src="script.js"></script>
-
-  <option value="" disabled selected>🗂️ Select Category</option>
 
 </body>
 </html>
